Add documentation swagger
